Added Authentication and changed the Welcome page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Dashboard Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Healthentia Vitals Dashboard</h1>
+<p>Welcome! Choose an option below:</p>
+
+<ul>
+    <li><a href="/Patients">View Patients</a></li>
+    <li><a href="/Vitals">Live Vitals Monitoring</a></li>
+</ul>
